fixed bugs in auth and organizations module
